k8s/cd/service/cloudflare-tunnel-policy/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-tunnel
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: region1.v2.argotunnel.com
        - matchName: region2.v2.argotunnel.com
      toPorts:
        - ports:
            - port: "7844"
              protocol: ANY
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            k8s:app.kubernetes.io/name: envoy
            k8s:app.kubernetes.io/component: proxy
            k8s:gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
